# ImageDedup

./: .gitignore  FEATURES.md  build.spec  pyproject.toml  run.py  test_suite.py
.github/workflows/: build.yml
src/image_dedup/: config.py  logging_setup.py  main.py
src/image_dedup/engine/: __init__.py  archive_scanner.py  cache.py  errors.py  feature.py  forensics.py  hasher.py  scanner.py  semantic.py  video.py
src/image_dedup/gui/: archive_scan_tab.py  comparison_widget.py  forensic_dialog.py  image_viewer_dialog.py  main_window.py  results_view.py  settings_dialog.py  theme.py  tray.py  widgets.py
src/image_dedup/report/: __init__.py  excel_report.py  html_report.py  pdf_report.py
src/image_dedup/report/templates/: report.html
